<resources>
    <string name="app_name">Le Pont Chaban Delmas</string>

    <string name="subtitle">"Dates et Heures de Levées</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Options</string>

    <string name="pont">Le Pont</string>
    <string name="chaban">Jacques Chaban Delmas</string>
    <string name="levee">Les Levées</string>
    <string name="titre2">Les Levées du Pont JCD</string>
    <string name="menu_settings">Vous aimez cette application? notez la sur le Google Play</string>
    <string name="indep">Marlène Charlet<p></p></string>
    <string name="devlop"><u>Développement</u></string>
    <string name="info"><u>Informations</u></string>
    <string name="info1">Les dates de fermetures sont indiquées sous réserve de confirmation de la Capitainerie.</string>
    <string name="blog"><u>www.BordeauxPaquebots.com </u></string>
    <string name="blog1">Vous voulez tout connaître des secrets des paquebots qui font escale à Bordeaux, venez découvrir ce blog très riche en informations.</string>

    <string name="contact1">italikdesignbordeaux@gmail.com</string>


    <string name="share">Partager</string>
    <string name="partage">Le PontChabanDelmasBordeaux, l\'application pour consulter où que vous soyez les dates et heures de levées du Pont J. Chaban Delmas. http://bit.ly/10BDLy1</string>

    <string name="parametre">Paramètres</string>

    <string name="promo">\@ItalikDesign</string>

    <string name="titre1">Levées du Pont Chaban Delmas</string>
    <string name="auteur">Par Marlene Charlet</string>
    <string name="version">Version 6.0.2</string>
    <string name="empty_string">Aucune donnée</string>
    <string name="donnees">données à jour</string>
    <string name="chargement">données en cours de chargement</string>
    <string name="configwidget">Vous êtes sur le point d\'installer le widget des levées du Pont Chaban Delmas. Les levées seront mises à jour toutes les 30 minutes.</string>
    <string name="bouton">Installer le widget</string>
    <string name="dialog_processinganduploading">En cours de chargement</string>
    <string name="dialog_nointernet">Aucune connexion n\'a été trouvée</string>
    <string name="site1"><u>Liens Officiels</u> </string>
    <string name="lien_site1">Bordeaux Métropole</string>
    <string name="lien_opendata">OpenData</string>

    <string name="liens_utiles"><u>Liens très utiles</u></string>
    <string name="bridgeman">BridgeMan via son compte Twitter vous informe de toutes les modifications de levées et évènements liés au pont Chaban Delmas.</string>

    <string name="licence"><u>Licence</u></string>
    <string name="licence_name">Apache License Version 2.0</string>
    <string name="licence_text">Vérifier les termes de la licence Apache</string>

    <string name="titrebateaux"><u>Bateaux</u></string>
    <string name="ferme">Actuellement fermé à la circulation</string>
    <string name="ouvert">Actuellement ouvert à la circulation</string>


    <string name="notif_pref_ok">Vous recevez les notifications la veille de la levée du pont, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_no">Vous ne recevez pas les notifications.</string>



    //AlertDialog Rate

    <string name="my_own_title">Soutenez l\'Appli !</string>
    <string name="my_own_message">Cette application vous aide dans vos trajets quotidiens ? Soutenez la en lui attribuant une note sur le Play Store !</string>
    <string name="my_own_rate">Notez maintenant</string>
    <string name="my_own_thanks">Non merci</string>
    <string name="my_own_cancel">Plus tard</string>

    //Choix horaires notification

    <string name="d00a07">Levée entre 00h00 et 07h00</string>
    <string name="d07a0930">Levée entre 07h00 et 09h30</string>
    <string name="d0930a1130">Levée entre 09h30 et 11h30</string>
    <string name="d1130a14">Levée entre 11h30 et 14h00</string>
    <string name="d14a1630">Levée entre 14h00 et 16h30</string>
    <string name="d1630a19">Levée entre 16h30 et 19h00</string>
    <string name="d19a00">Levée entre 19h00 et 00h00</string>
    <string name="samedi">Levée le Samedi</string>
    <string name="dimanche">Levée le Dimanche et Jours fériés</string>

    <string name="notif_pref_ok_00a07">Vous recevez les notifications des levées situées entre 00h00 et 07h00, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_07a0930">Vous recevez les notifications des levées situées entre 07h00 et 09h30, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_0930a1130">Vous recevez les notifications des levées situées entre 09h30 et 11h30, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_1130a14">Vous recevez les notifications des levées situées entre 11h30 et 14h00, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_14a1630">Vous recevez les notifications des levées situées entre 14h00 et 16h30, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_1630a19">Vous recevez les notifications des levées situées entre 16h30 et 19h00, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_19a00">Vous recevez les notifications des levées situées entre 19h00 et 00h00, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_samedi">Vous recevez les notifications des levées du Samedi, ainsi que toutes les modifications de dernière minute en temps réel.</string>
    <string name="notif_pref_ok_dimanche">Vous recevez les notifications des levées du Dimanche et des jours fériés, ainsi que toutes les modifications de dernière minute en temps réel.</string>


    <string name="notif_pref_no_00a07">Vous ne recevez pas les notifications des levées situées entre 00h00 et 07h00.</string>
    <string name="notif_pref_no_07a0930">Vous ne recevez pas les notifications des levées situées entre 07h00 et 09h30.</string>
    <string name="notif_pref_no_0930a1130">Vous ne recevez pas les notifications des levées situées entre 09h30 et 11h30.</string>
    <string name="notif_pref_no_1130a14">Vous ne recevez pas les notifications des levées situées entre 11h30 et 14h00.</string>
    <string name="notif_pref_no_14a1630">Vous ne recevez pas les notifications des levées situées entre 14h00 et 16h30.</string>
    <string name="notif_pref_no_1630a19">Vous ne recevez pas les notifications des levées situées entre 16h30 et 19h00.</string>
    <string name="notif_pref_no_19a00">Vous ne recevez pas les notifications des levées situées entre 19h00 et 00h00.</string>
    <string name="notif_pref_no_samedi">Vous ne recevez pas les notifications des levées du Samedi.</string>
    <string name="notif_pref_no_dimanche">Vous ne recevez pas les notifications des levées du Dimanche et des jour fériés.</string>


    //Fenêtre changement thème
    <string name="theme_pref_oksombre">Vous passez en mode sombre.</string>
    <string name="theme_pref_nosombre">Vous passez en mode clair.</string>
    <string name="themeChangement">Changer de thème</string>



</resources>
