<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="60dp"
        android:background="@color/colorPrimary"

        >
        <androidx.cardview.widget.CardView

            android:id="@+id/card_view_sombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="7dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp"
            >


            <RelativeLayout
                android:id="@+id/themerelative"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"


                >

                <FrameLayout
                    android:id="@+id/contourhaut"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentTop="true"
                    android:background="@color/colorPrimary2"/>
                <FrameLayout
                    android:id="@+id/contourbas"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorPrimary2"/>

                <ImageView
                    android:id="@+id/palette"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:srcCompat="@drawable/ic_color_lens_black_24dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"/>


                <TextView android:id="@+id/themetext"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/themeChangement"
                    android:paddingLeft="40.0dp"
                    android:paddingTop="10dp"
                    android:textSize="14.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/vert_arrivee">
                </TextView>
                <Switch
                    android:id="@+id/themeSombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="Activer le mode sombre"
                    android:textColor="@color/windowBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:switchPadding="40dp"
                    android:layout_below="@id/themetext"
                    android:paddingLeft="40dp"
                    android:layout_alignParentLeft="true" />

                <View
                    android:id="@+id/ligne"
                    android:layout_height="0.2dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/gris_text"
                    android:layout_width="match_parent"
                    android:paddingTop="10dp"
                    android:layout_below="@id/themeSombre"

                    />

                <TextView android:id="@+id/theme_pref_oksombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_pref_oksombre"
                    android:paddingRight="8dp"
                    android:paddingTop="12dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="13.0sp"
                    android:textColor="@color/windowBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_below="@id/ligne"
                    />

                <TextView android:id="@+id/theme_pref_nosombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme_pref_nosombre"
                    android:paddingRight="8dp"
                    android:paddingTop="12dp"
                    android:paddingLeft="8dp"
                    android:paddingBottom="8dp"
                    android:textSize="13.0sp"
                    android:textColor="@color/windowBackground"
                    android:fontFamily="@font/roboto_thin"
                    android:layout_below="@id/ligne"
                    />

            </RelativeLayout></androidx.cardview.widget.CardView>

    </LinearLayout></ScrollView>